--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jackvorobey23.github.io",
+  "homepage": "https://jackvorobey23.github.io/advert-app",
   "name": "advert-app",
   "version": "0.1.0",
   "private": true,
